Added content and styles to api section

--- a/index.html
+++ b/index.html
@@ -1,20 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Dinero Pay</title>
-		<link rel="stylesheet" href="reset.css" />
-		<link rel="stylesheet" href="styles.css" />
-	</head>
-	<body>
-		<section class="main"></section>
-		<section class="payment_method"></section>
-		<section class="dashboard"></section>
-		<section class="api"></section>
-		<section class="plugins"></section>
-		<section class="footer"></section>
-		<script src="script.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dinero Pay</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <section class="main"></section>
+    <section class="payment_method"></section>
+    <section class="dashboard"></section>
+    <section class="api">
+      <div class="api__row api__row--1">
+        <div class="card">
+          <img src="img/card-icon-1.svg" alt="card-icon-1" class="card__icon" />
+          <h6 class="card__title">Lorem ipsum</h6>
+          <p class="card__body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+            quia quo culpa beatae a eum.
+          </p>
+        </div>
+        <div class="card">
+          <img src="img/card-icon-2.svg" alt="card-icon-2" class="card__icon" />
+          <h6 class="card__title">Lorem ipsum</h6>
+          <p class="card__body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+            quia quo culpa beatae a eum.
+          </p>
+        </div>
+        <div class="card">
+          <img src="img/card-icon-3.svg" alt="card-icon-3" class="card__icon" />
+          <h6 class="card__title">Lorem ipsum</h6>
+          <p class="card__body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+            quia quo culpa beatae a eum.
+          </p>
+        </div>
+      </div>
+      <div class="api__row api__row--2">
+        <div class="code">
+          <img src="img/code.svg" alt="code" />
+        </div>
+        <div class="description">
+          <h3>Lorem ipsum, dolor sit amet</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor,
+            omnis nobis vitae qui praesentium aliquid repellat veniam fuga alias
+            velit.
+          </p>
+          <button class="btn"></button>
+        </div>
+      </div>
+    </section>
+    <section class="plugins"></section>
+    <section class="footer"></section>
+    <script src="script.js"></script>
+  </body>
 </html>
