Added content and styles to plugins section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
         </div>
       </div>
     </section>
-    <section class="plugins"></section>
+    <section class="plugins">
+      <h2 class="plugins__heading">We support most big platforms</h2>
+      <div class="plugins__box">
+        <div class="plugins__icons"></div>
+      </div>
+    </section>
     <section class="footer"></section>
     <script src="script.js"></script>
   </body>
