Added content and styles to footer

--- a/index.html
+++ b/index.html
@@ -60,7 +60,23 @@
         <div class="plugins__icons"></div>
       </div>
     </section>
-    <section class="footer"></section>
+    <section class="footer">
+      <div class="bank">
+        <img class="bank__icon" src="img/bank-rajhi.svg" alt="Al Rajhi Bank" />
+        <img class="bank__icon" src="img/bank-bilad.svg" alt="Bilad Bank" />
+      </div>
+      <div class="explore">
+        <div class="explore__box">
+          <p>Start your journey today</p>
+          <button class="btn"></button>
+        </div>
+        <img
+          class="footer__logo"
+          src="img/dinero-pay-logo.svg"
+          alt="Dinero Pay Logo"
+        />
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
