--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
     </section>
     <section class="plugins">
       <h2 class="plugins__heading">We support most big platforms</h2>
-      <div class="plugins__box">
-        <div class="plugins__icons"></div>
-      </div>
+      <div class="plugins__box"></div>
     </section>
     <section class="footer">
       <div class="bank">
@@ -66,6 +64,19 @@
         <img class="bank__icon" src="img/bank-bilad.svg" alt="Bilad Bank" />
       </div>
       <div class="explore">
+        <div class="explore__divider">
+          <svg
+            data-name="Layer 1"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 1200 120"
+            preserveAspectRatio="none"
+          >
+            <path
+              d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+              class="shape-fill"
+            ></path>
+          </svg>
+        </div>
         <div class="explore__box">
           <p>Start your journey today</p>
           <button class="btn"></button>
