adding initial animation

--- a/index.html
+++ b/index.html
@@ -77,23 +77,29 @@
 								alt="blob"
 							/>
 						</div>
-						<img
-							src="./assets/images/applepay.svg"
-							alt="applepay"
-							class="solar__payment-method--logo applepay"
-						/><img
-							src="./assets/images/mastercard.svg"
-							alt="mastercard"
-							class="solar__payment-method--logo mastercard"
-						/><img
-							src="./assets/images/visa.svg"
-							alt="visa"
-							class="solar__payment-method--logo visa"
-						/><img
-							src="./assets/images/mada.svg"
-							alt="mada"
-							class="solar__payment-method--logo mada"
-						/>
+						<div class="icons-container">
+							<img
+								src="./assets/images/applepay.svg"
+								alt="applepay"
+								class="solar__payment-method--logo applepay"
+								data-speed="3s"
+							/><img
+								src="./assets/images/mastercard.svg"
+								alt="mastercard"
+								class="solar__payment-method--logo mastercard"
+								data-speed="2s"
+							/><img
+								src="./assets/images/visa.svg"
+								alt="visa"
+								class="solar__payment-method--logo visa"
+								data-speed=".4s"
+							/><img
+								src="./assets/images/mada.svg"
+								alt="mada"
+								class="solar__payment-method--logo mada"
+								data-speed="6s"
+							/>
+						</div>
 					</div>
 				</div>
 				<div class="payment_method__right">
