Modified the folder structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="api">
       <div class="api__row api__row--1">
         <div class="card">
-          <img src="img/card-icon-1.svg" alt="card-icon-1" class="card__icon" />
+          <img src="assets/images/card-icon-1.svg" alt="card-icon-1" class="card__icon" />
           <h6 class="card__title">Lorem ipsum</h6>
           <p class="card__body">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
@@ -23,7 +23,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="img/card-icon-2.svg" alt="card-icon-2" class="card__icon" />
+          <img src="assets/images/card-icon-2.svg" alt="card-icon-2" class="card__icon" />
           <h6 class="card__title">Lorem ipsum</h6>
           <p class="card__body">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
@@ -31,7 +31,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="img/card-icon-3.svg" alt="card-icon-3" class="card__icon" />
+          <img src="assets/images/card-icon-3.svg" alt="card-icon-3" class="card__icon" />
           <h6 class="card__title">Lorem ipsum</h6>
           <p class="card__body">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
@@ -41,7 +41,7 @@
       </div>
       <div class="api__row api__row--2">
         <div class="code">
-          <img src="img/code.svg" alt="code" />
+          <img src="assets/images/code.svg" alt="code" />
         </div>
         <div class="description">
           <h3>Lorem ipsum, dolor sit amet</h3>
@@ -60,8 +60,8 @@
     </section>
     <section class="footer">
       <div class="bank">
-        <img class="bank__icon" src="img/bank-rajhi.svg" alt="Al Rajhi Bank" />
-        <img class="bank__icon" src="img/bank-bilad.svg" alt="Bilad Bank" />
+        <img class="bank__icon" src="assets/images/bank-rajhi.svg" alt="Al Rajhi Bank" />
+        <img class="bank__icon" src="assets/images/bank-bilad.svg" alt="Bilad Bank" />
       </div>
       <div class="explore">
         <div class="explore__divider">
@@ -83,7 +83,7 @@
         </div>
         <img
           class="footer__logo"
-          src="img/dinero-pay-logo.svg"
+          src="assets/images/dinero-pay-logo.svg"
           alt="Dinero Pay Logo"
         />
       </div>
