--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <section class="api">
       <div class="api__row api__row--1">
         <div class="card">
-          <img src="assets/images/card-icon-1.svg" alt="card-icon-1" class="card__icon" />
+          <img
+            src="assets/images/card-icon-1.svg"
+            alt="card-icon-1"
+            class="card__icon"
+          />
           <h6 class="card__title">Lorem ipsum</h6>
           <p class="card__body">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
@@ -23,7 +27,11 @@
           </p>
         </div>
         <div class="card">
-          <img src="assets/images/card-icon-2.svg" alt="card-icon-2" class="card__icon" />
+          <img
+            src="assets/images/card-icon-2.svg"
+            alt="card-icon-2"
+            class="card__icon"
+          />
           <h6 class="card__title">Lorem ipsum</h6>
           <p class="card__body">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
@@ -31,7 +39,11 @@
           </p>
         </div>
         <div class="card">
-          <img src="assets/images/card-icon-3.svg" alt="card-icon-3" class="card__icon" />
+          <img
+            src="assets/images/card-icon-3.svg"
+            alt="card-icon-3"
+            class="card__icon"
+          />
           <h6 class="card__title">Lorem ipsum</h6>
           <p class="card__body">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
@@ -56,12 +68,55 @@
     </section>
     <section class="plugins">
       <h2 class="plugins__heading">We support most big platforms</h2>
-      <div class="plugins__box"></div>
+      <div class="plugins__box">
+        <div class="plugins__scroll">
+          <div class="plugins__stripe plugins__stripe--1">
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+          </div>
+          <div class="plugins__stripe plugins__stripe--2">
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+          </div>
+          <div class="plugins__stripe plugins__stripe--3">
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+          </div>
+          <div class="plugins__stripe plugins__stripe--4">
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+          </div>
+          <div class="plugins__stripe plugins__stripe--5">
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+          </div>
+          <div class="plugins__stripe plugins__stripe--6">
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+          </div>
+          <div class="plugins__stripe plugins__stripe--7">
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+          </div>
+          <div class="plugins__stripe plugins__stripe--8">
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+            <img src="assets/images/plugins-stripe.svg" alt="Plugins Stripe" />
+          </div>
+        </div>
+      </div>
     </section>
     <section class="footer">
       <div class="bank">
-        <img class="bank__icon" src="assets/images/bank-rajhi.svg" alt="Al Rajhi Bank" />
-        <img class="bank__icon" src="assets/images/bank-bilad.svg" alt="Bilad Bank" />
+        <img
+          class="bank__icon"
+          src="assets/images/bank-rajhi.svg"
+          alt="Al Rajhi Bank"
+        />
+        <img
+          class="bank__icon"
+          src="assets/images/bank-bilad.svg"
+          alt="Bilad Bank"
+        />
       </div>
       <div class="explore">
         <div class="explore__divider">
